exempi (2.1.1-2) UNRELEASED; urgency=low

  * Switch to source format 3.0 (quilt)
    - Add debian/source/format.
    - Drop Build-Depends on quilt.
    - Remove /usr/share/cdbs/1/rules/patchsys-quilt.mk include.
    - Remove debian/README.source.

 -- Michael Biebl <biebl@debian.org>  Sun, 05 Dec 2010 04:56:58 +0100

exempi (2.1.1-1) unstable; urgency=low

  * New upstream release.
  * debian/control
    - Bump Standards-Version to 3.8.2. No further changes.
    - Change section of libexempi3-dbg to debug.
  * debian/rules
    - Remove DEB_DH_INSTALL_SOURCEDIR, no longer required with debhelper v7
      compat mode.
  * debian/patches/01-gcc_4.4_missing_includes.patch
    - Removed, merged upstream.

 -- Michael Biebl <biebl@debian.org>  Wed, 01 Jul 2009 15:28:19 +0200

exempi (2.1.0-3) unstable; urgency=low

  * Merge changes from experimental branch.
  * debian/compat
    - Bump to debhelper v7 compat mode.
  * debian/control
    - Bump Build-Depends on debhelper to (>= 7).

 -- Michael Biebl <biebl@debian.org>  Mon, 16 Feb 2009 00:44:01 +0100

exempi (2.1.0-2) experimental; urgency=low

  * debian/control
    - Update Vcs-* headers. Package is now managed with Git on git.debian.org.

 -- Michael Biebl <biebl@debian.org>  Wed, 28 Jan 2009 21:27:36 +0100

exempi (2.1.0-1) experimental; urgency=low

  * New upstream release.
  * debian/control
    - Add Build-Depends on zlib1g-dev.
    - Add ${misc:Depends} to all binary packages.
  * debian/patches/01-gcc_4.4_missing_includes.patch
    - Refreshed and updated to the latest code changes.
  * debian/libexempi3.shlibs 
    - Add shlibs file and set it to (>= 2.1.0) due to API additions.

 -- Michael Biebl <biebl@debian.org>  Sun, 28 Dec 2008 21:56:13 +0100

exempi (2.0.2-2) unstable; urgency=low

  * Switch patch management system to quilt. 
  * debian/control
    - Add Build-Depends on quilt.
  * debian/rules
    - Include patchsys-quilt.mk cdbs rules file.
  * debian/README.source