@@ -1,6 +1,13 @@
 #!/usr/bin/make -f
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
+%:
+	dh $@
 
-DEB_CONFIGURE_EXTRA_FLAGS += --disable-unittest
+override_dh_auto_configure:
+	dh_auto_configure -- --disable-unittest
+
+override_dh_installdocs:
+	dh_installdocs --all AUTHORS NEWS README TODO
+
+override_dh_strip:
+	dh_strip --dbg-package=libexempi3-dbg
